--- a/src/styles.css
+++ b/src/styles.css
@@ -18,20 +18,32 @@ body {
 }
 
 header {
-  padding-top: 12px;
-  height: 150px;
+  padding-bottom: 12px;
+  height: 130px;
+  width: 100%;
+  background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+  position: fixed;
+  top: 0;
+  z-index: 1;
 }
 
-header div {
-  width: 120px;
+
+.header1 {
+  background-color: #2A2634;
+  display: flex;
+  width: 100%;
   margin: auto;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
 }
 
 h1 {
   height: 90px;
-  margin-top: 50px;
+  margin-top: 25px;
   letter-spacing: 10px;
   text-align: center;
+
 }
 
 h2 {
@@ -48,6 +60,7 @@ main {
   align-items: center;
   gap: 36px;
   padding-bottom: 36px;
+  padding-top: 150px;
 }
 
 section {
@@ -123,6 +136,7 @@ img {
   padding: 24px;
   gap: 32px;
   margin-left: 10%;
+  border-radius: 30px;
 }
 
 .imageUrl {
@@ -172,4 +186,17 @@ h3 {
   text-align: justify;
   text-indent: 25px;
   padding: 16px;
+}
+
+.close {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  border: none;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  font-size: 2.5rem;
+  position: absolute;
+  margin-left: 1143px;
+  margin-bottom: 748px;
 }
